MODBULKOPS-196 -  Updating Suppress from discovery flag (#162)